--- a/app/src/main/webapp/login.xhtml
+++ b/app/src/main/webapp/login.xhtml
@@ -56,9 +56,11 @@
                             <a class="login100-form-btn" href="register.xhtml">Register here</a>
                         </div>
 
-                        <h:messages>
-                            <h:outputText value="#{LoginController.info()}"/>
-                        </h:messages>
+                        <h:outputText value="#{msg['jaz.app.name']}"/>
+
+<!--                        <h:messages>-->
+<!--                            <h:outputText value="#{LoginController.info()}"/>-->
+<!--                        </h:messages>-->
 
                     </h:form>
                 </div>
