--- a/app/src/main/webapp/login.xhtml
+++ b/app/src/main/webapp/login.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
+<html xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Log in</title>
@@ -56,13 +56,14 @@
                             <a class="login100-form-btn" href="register.xhtml">Register here</a>
                         </div>
 
-                        <h:outputText value="#{msg['jaz.app.name']}"/>
 
 <!--                        <h:messages>-->
 <!--                            <h:outputText value="#{LoginController.info()}"/>-->
 <!--                        </h:messages>-->
 
                     </h:form>
+                    <h:outputText value="#{msg['jaz.app.name']}"/>
+
                 </div>
             </div>
 
