--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -74,6 +74,7 @@
                         </div>
 
                     </h:form>
+                    <h:outputText value="#{msg['jaz.app.name']}"/>
                 </div>
             </div>
 
