--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -20,7 +20,7 @@
     <div class="main">
         <div style="text-align: center;">
             <h2>Welcome to application!</h2>
-            <h:outputText value="#{msg['jaz.app.name']}"/>
+<!--            <h:outputText value="#{msg['jaz.app.name']}"/>-->
 
             <!--            <div class="container-login100-form-btn">-->
 <!--                <a class="container-login100-form-btn" href="login.xhtml">Log in</a>-->
