--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -32,7 +32,6 @@
                             <h:outputLabel value="Name and Surname"/>
                             <h:inputText value="#{registerRequest.nameSurname}" label="Name and Surname" class="input100">
                                 <f:validateLength minimum="3" maximum="50"/>
-                                <f:validateRegex pattern="[a-z]"/>
                             </h:inputText>
                         </div>
 
@@ -40,7 +39,6 @@
                             <h:outputLabel value="Username"/>
                             <h:inputText name="username" value="#{registerRequest.username}" label="Username" class="input100">
                                 <f:validateLength for="username" minimum="1" maximum="15"/>
-                                <f:validateRegex for="username" pattern="^([a-zA-Z]+(.)?[\s]*)$"/>
                             </h:inputText>
                         </div>
 
@@ -55,14 +53,12 @@
                             <h:outputLabel value="Email"/>
                             <h:inputText value="#{registerRequest.email}" label="Email" class="input100">
                                 <f:validateLength minimum="3" maximum="50"/>
-                                <f:validateRegex pattern="[a-z]"/>
                             </h:inputText>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Birthday"/>
                             <h:inputText value="#{registerRequest.birthday}" label="birthday" class="input100">
-                                <f:convertDateTime pattern="dd/mm/yyyy"/>
                             </h:inputText>
                         </div>
 
@@ -74,7 +70,7 @@
                         </div>
 
                     </h:form>
-                    <h:outputText value="#{msg['jaz.app.name']}"/>
+<!--                    <h:outputText value="#{msg['jaz.app.name']}"/>-->
                 </div>
             </div>
 
