--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:h="http://java.sun.com/jsf/html">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
     <title>App</title>
@@ -20,15 +20,15 @@
     <div class="main">
         <div style="text-align: center;">
             <h2>Welcome to application!</h2>
-<!--            <h:outputText value="#{msg['jaz.app.name']}"/>-->
+            <h:outputText value="#{msg['jaz.app.name']}"/>
 
-            <!--            <div class="container-login100-form-btn">-->
-<!--                <a class="container-login100-form-btn" href="login.xhtml">Log in</a>-->
-<!--            </div>-->
-<!--            <p></p>-->
-<!--            <div class="container-login100-form-btn">-->
-<!--                <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>-->
-<!--            </div>-->
+            <div class="container-login100-form-btn">
+                <a class="container-login100-form-btn" href="login.xhtml">Log in</a>
+            </div>
+            <p></p>
+            <div class="container-login100-form-btn">
+                <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>
+            </div>
         </div>
     </div>
     <h:outputScript name="jquery-3.2.1.min.js" library="vendor" />
