--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Register</title>
 
-<!--    <h:outputStylesheet rel="stylesheet" href="style.css" type="text/css"/> -->
+    <!--    <h:outputStylesheet rel="stylesheet" href="style.css" type="text/css"/> -->
 
     <h:outputStylesheet name="img.jpg" library="images"/>
     <h:outputStylesheet name="bootstrap.min.css" library="vendor"/>
@@ -30,36 +30,47 @@
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Name and Surname"/>
-                            <h:inputText value="#{registerRequest.nameSurname}" label="Name and Surname" class="input100">
-                                <f:validateLength minimum="3" maximum="50"/>
+                            <h:inputText validatorMessage="Name can have only big and small letters." value="#{registerRequest.nameSurname}" id="name" class="input100">
+                                <f:validateLength for="name" minimum="3" maximum="50"/>
+                                <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z])"/>
                             </h:inputText>
+                            <h:message for="name"></h:message>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Username"/>
-                            <h:inputText name="username" value="#{registerRequest.username}" label="Username" class="input100">
+                            <h:inputText id="username" validatorMessage="Username can have only small letters and numbers." value="#{registerRequest.username}" label="Username" class="input100">
                                 <f:validateLength for="username" minimum="1" maximum="15"/>
+                                <f:validateRegex pattern="((?=.*\d)(?=.*[a-z]).{1,33})"/>
                             </h:inputText>
+                            <h:message for="username"></h:message>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Password"/>
-                            <h:inputSecret value="#{registerRequest.password}" label="Password" class="input100">
+                            <h:inputSecret validatorMessage="Haslo should have at least one small letter, one big letter, and numbers, and should be minimum of 8 characters long."
+                                           value="#{registerRequest.password}" id="password" class="input100">
                                 <f:validateLength minimum="8" maximum="33"/>
+                                <f:validateRegex pattern="((?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{5,30})"/>
                             </h:inputSecret>
+                            <h:message for="password"></h:message>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Email"/>
-                            <h:inputText value="#{registerRequest.email}" label="Email" class="input100">
+                            <h:inputText validatorMessage="Should be email." value="#{registerRequest.email}" id="email" class="input100" required="true">
                                 <f:validateLength minimum="3" maximum="50"/>
+                                <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"/>
                             </h:inputText>
+                            <h:message for="email"></h:message>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Birthday"/>
-                            <h:inputText value="#{registerRequest.birthday}" label="birthday" class="input100">
+                            <h:inputText value="#{registerRequest.birthday}" id="birthday" class="input100">
+                                <f:validateRegex pattern="[^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$]"/>
                             </h:inputText>
+                            <h:message for="birthday"></h:message>
                         </div>
 
                         <div class="container-login100-form-btn">
@@ -68,9 +79,8 @@
                         <div class="container-login100-form-btn">
                             <a class="login100-form-btn" href="login.xhtml">Login here</a>
                         </div>
-
                     </h:form>
-<!--                    <h:outputText value="#{msg['jaz.app.name']}"/>-->
+
                 </div>
             </div>
 
