--- a/app/src/main/webapp/login.xhtml
+++ b/app/src/main/webapp/login.xhtml
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="container-login100-form-btn">
-                            <h:commandButton value="Login" class="login100-form-btn" action="#{loginController.login}"/>
+                            <h:commandButton value="Login" class="login100-form-btn" action="#{loginController.login()}"/>
                         </div>
 
                         <div class="container-login100-form-btn">
