--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register</title>
+    <title>Register   AlienBrain</title>
 
     <!--    <h:outputStylesheet rel="stylesheet" href="style.css" type="text/css"/> -->
 
@@ -32,7 +32,7 @@
                             <h:outputLabel value="Name and Surname"/>
                             <h:inputText validatorMessage="Name can have only big and small letters." value="#{registerRequest.nameSurname}" id="name" class="input100">
                                 <f:validateLength for="name" minimum="3" maximum="50"/>
-                                <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z])"/>
+                                <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z]))"/>
                             </h:inputText>
                             <h:message for="name"></h:message>
                         </div>
@@ -67,7 +67,7 @@
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Birthday"/>
-                            <h:inputText value="#{registerRequest.birthday}" id="birthday" class="input100">
+                            <h:inputText validatorMessage="dd/mm/yyyy" value="#{registerRequest.birthday}" id="birthday" class="input100">
                                 <f:validateRegex pattern="[^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$]"/>
                             </h:inputText>
                             <h:message for="birthday"></h:message>
