--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://xmlns.jcp.org/jsf/core">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Register   AlienBrain</title>
 
-    <!--    <h:outputStylesheet rel="stylesheet" href="style.css" type="text/css"/> -->
 
-    <h:outputStylesheet name="img.jpg" library="images"/>
-    <h:outputStylesheet name="bootstrap.min.css" library="vendor"/>
-    <h:outputStylesheet name="animate.css" library="vendor"/>
-    <h:outputStylesheet name="hamburgers.min.css" library="vendor"/>
-    <h:outputStylesheet name="select2.min.css" library="vendor"/>
-    <h:outputStylesheet name="main.css" library="css"/>
-    <h:outputStylesheet name="util.css" library="css"/>
+
+    <ui:insert name="base">
+        <ui:include src="base.xhtml"></ui:include>
+    </ui:insert>
+<!--    <h:outputStylesheet name="img.jpg" library="images"/>-->
+<!--    <h:outputStylesheet name="bootstrap.min.css" library="vendor"/>-->
+<!--    <h:outputStylesheet name="animate.css" library="vendor"/>-->
+<!--    <h:outputStylesheet name="hamburgers.min.css" library="vendor"/>-->
+<!--    <h:outputStylesheet name="select2.min.css" library="vendor"/>-->
+<!--    <h:outputStylesheet name="main.css" library="css"/>-->
+<!--    <h:outputStylesheet name="util.css" library="css"/>-->
 </h:head>
 <h:body>
     <div class="container-login100" >
@@ -29,49 +32,54 @@
                         <div style="text-align: center;"><h:outputLabel value="Register" style="align-self: center; font-size: xx-large"/></div>
 
                         <div class="wrap-input100">
-                            <h:outputLabel value="Name and Surname"/>
+                            <h:outputLabel value="Name"/>
                             <h:inputText validatorMessage="Name can have only big and small letters." value="#{registerRequest.nameSurname}" id="name" class="input100">
-                                <f:validateLength for="name" minimum="3" maximum="50"/>
-                                <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z]))"/>
+                                <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z]).{3,50})"/>
                             </h:inputText>
-                            <h:message for="name"></h:message>
+                            <h:messages for="name"></h:messages>
+                        </div>
+
+                        <div class="wrap-input100">
+                            <h:outputLabel value="Surname"/>
+                            <h:inputText validatorMessage="Surname can have only big and small letters." value="#{registerRequest.nameSurname}" id="surname" class="input100">
+                                <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z]).{3,50})"/>
+                            </h:inputText>
+                            <h:messages for="surname"></h:messages>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Username"/>
                             <h:inputText id="username" validatorMessage="Username can have only small letters and numbers." value="#{registerRequest.username}" label="Username" class="input100">
-                                <f:validateLength for="username" minimum="1" maximum="15"/>
                                 <f:validateRegex pattern="((?=.*\d)(?=.*[a-z]).{1,33})"/>
                             </h:inputText>
-                            <h:message for="username"></h:message>
+                            <h:messages for="username"></h:messages>
                         </div>
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Password"/>
                             <h:inputSecret validatorMessage="Haslo should have at least one small letter, one big letter, and numbers, and should be minimum of 8 characters long."
                                            value="#{registerRequest.password}" id="password" class="input100">
-                                <f:validateLength minimum="8" maximum="33"/>
-                                <f:validateRegex pattern="((?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{5,30})"/>
+                                <f:validateRegex pattern="((?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,33})"/>
                             </h:inputSecret>
-                            <h:message for="password"></h:message>
+                            <h:messages for="password"></h:messages>
                         </div>
 
-                        <div class="wrap-input100">
-                            <h:outputLabel value="Email"/>
-                            <h:inputText validatorMessage="Should be email." value="#{registerRequest.email}" id="email" class="input100" required="true">
-                                <f:validateLength minimum="3" maximum="50"/>
-                                <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"/>
-                            </h:inputText>
-                            <h:message for="email"></h:message>
-                        </div>
+<!--                        <div class="wrap-input100">-->
+<!--                            <h:outputLabel value="Email"/>-->
+<!--                            <h:inputText validatorMessage="Should be email." value="#{registerRequest.email}" id="email" class="input100" required="true">-->
+<!--                                <f:validateLength minimum="3" maximum="50"/>-->
+<!--                                <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"/>-->
+<!--                            </h:inputText>-->
+<!--                            <h:messages for="email"></h:messages>-->
+<!--                        </div>-->
 
-                        <div class="wrap-input100">
-                            <h:outputLabel value="Birthday"/>
-                            <h:inputText validatorMessage="dd/mm/yyyy" value="#{registerRequest.birthday}" id="birthday" class="input100">
-                                <f:validateRegex pattern="[^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$]"/>
-                            </h:inputText>
-                            <h:message for="birthday"></h:message>
-                        </div>
+<!--                        <div class="wrap-input100">-->
+<!--                            <h:outputLabel value="Birthday"/>-->
+<!--                            <h:inputText validatorMessage="dd/mm/yyyy" value="#{registerRequest.birthday}" id="birthday" class="input100">-->
+<!--                                <f:validateRegex pattern="[^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$]"/>-->
+<!--                            </h:inputText>-->
+<!--                            <h:messages for="birthday"></h:messages>-->
+<!--                        </div>-->
 
                         <div class="container-login100-form-btn">
                             <h:commandButton value="Register" class="login100-form-btn" action="#{registerController.register}"/>
@@ -87,16 +95,8 @@
         </div>
     </div>
 
-    <h:outputScript name="jquery-3.2.1.min.js" library="vendor" />
-    <h:outputScript name="popper.js" library="vendor" />
-    <h:outputScript name="bootstrap.min.js" library="vendor" />
-    <h:outputScript name="select2.min.js" library="vendor" />
-    <h:outputScript name="tilt.jquery.min.js" library="vendor" />
-    <h:outputScript>
-        $('.js-tilt').tilt({
-            scale: 1.1
-        })
-    </h:outputScript>
-    <h:outputScript name="main.js" library="js" type="javascript"/>
+    <ui:insert name="js">
+        <ui:include src="js.xhtml"></ui:include>
+    </ui:insert>
 </h:body>
 </html>
