--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -21,6 +21,7 @@
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="login.xhtml">Log in</a>
             </div>
+            <h:commandButton value="logout" class="container-login100-form-btn" action="#{logoutController.logout}"/>
             <p></p>
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>
