--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -33,7 +33,7 @@
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Name"/>
-                            <h:inputText validatorMessage="Name can have only big and small letters." value="#{registerRequest.nameSurname}" id="name" class="input100">
+                            <h:inputText validatorMessage="Name can have only big and small letters." value="#{registerRequest.name}" id="name" class="input100">
                                 <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z]).{3,50})"/>
                             </h:inputText>
                             <h:messages for="name"></h:messages>
@@ -41,7 +41,7 @@
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Surname"/>
-                            <h:inputText validatorMessage="Surname can have only big and small letters." value="#{registerRequest.nameSurname}" id="surname" class="input100">
+                            <h:inputText validatorMessage="Surname can have only big and small letters." value="#{registerRequest.surname}" id="surname" class="input100">
                                 <f:validateRegex pattern="((?=.*[a-z])(?=.*[A-Z]).{3,50})"/>
                             </h:inputText>
                             <h:messages for="surname"></h:messages>
@@ -64,22 +64,22 @@
                             <h:messages for="password"></h:messages>
                         </div>
 
-<!--                        <div class="wrap-input100">-->
-<!--                            <h:outputLabel value="Email"/>-->
-<!--                            <h:inputText validatorMessage="Should be email." value="#{registerRequest.email}" id="email" class="input100" required="true">-->
-<!--                                <f:validateLength minimum="3" maximum="50"/>-->
-<!--                                <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"/>-->
-<!--                            </h:inputText>-->
-<!--                            <h:messages for="email"></h:messages>-->
-<!--                        </div>-->
+                        <div class="wrap-input100">
+                            <h:outputLabel value="Email"/>
+                            <h:inputText validatorMessage="Should be email." value="#{registerRequest.email}" id="email" class="input100" required="true">
+                                <f:validateLength minimum="3" maximum="50"/>
+                                <f:validateRegex pattern="^[a-zA-Z0-9_.+-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$"/>
+                            </h:inputText>
+                            <h:messages for="email"></h:messages>
+                        </div>
 
-<!--                        <div class="wrap-input100">-->
-<!--                            <h:outputLabel value="Birthday"/>-->
-<!--                            <h:inputText validatorMessage="dd/mm/yyyy" value="#{registerRequest.birthday}" id="birthday" class="input100">-->
-<!--                                <f:validateRegex pattern="[^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$]"/>-->
-<!--                            </h:inputText>-->
-<!--                            <h:messages for="birthday"></h:messages>-->
-<!--                        </div>-->
+                        <div class="wrap-input100">
+                            <h:outputLabel value="Birthday"/>
+                            <h:inputText validatorMessage="dd/MM/yyyy" value="#{registerRequest.birthDate}" id="birthDate" class="input100">
+                                <f:validateRegex pattern="^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$"/>
+                            </h:inputText>
+                            <h:messages for="birthDate"></h:messages>
+                        </div>
 
                         <div class="container-login100-form-btn">
                             <h:commandButton value="Register" class="login100-form-btn" action="#{registerController.register}"/>
