Created Entities sql tables

--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
+      xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://xmlns.jcp.org/jsf/html">
 
 <h:head>
     <title>App</title>
@@ -21,7 +23,12 @@
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="login.xhtml">Log in</a>
             </div>
-            <h:commandButton value="logout" class="container-login100-form-btn" action="#{logoutController.logout}"/>
+            <p></p>
+            <h:form>
+                <div class="container-login100-form-btn">
+                    <p:commandButton value="logout" action="#{logoutController.logout}"/>
+                </div>
+            </h:form>
             <p></p>
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>
