--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -33,6 +33,9 @@
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>
             </div>
+            <div class="container-login100-form-btn">
+                <a class="container-login100-form-btn" href="adminProfile.xhtml">Admin</a>
+            </div>
         </div>
     </div>
     <ui:insert name="js">
