--- a/app/src/main/webapp/base.xhtml
+++ b/app/src/main/webapp/base.xhtml
@@ -11,6 +11,7 @@
 <ui:composition>
 
 <h:outputStylesheet name="img.jpg" library="images"/>
+<h:outputStylesheet name="bootstrap.css" library="css"/>
 <h:outputStylesheet name="bootstrap.min.css" library="vendor"/>
 <h:outputStylesheet name="animate.css" library="vendor"/>
 <h:outputStylesheet name="hamburgers.min.css" library="vendor"/>
