--- a/app/src/main/webapp/adminProfile.xhtml
+++ b/app/src/main/webapp/adminProfile.xhtml
@@ -3,139 +3,139 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets">
-
-<h:head>
-    <title>Admin Profile</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+      xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:f="http://xmlns.jcp.org/jsf/core">
+<f:view>
 
 
-    <ui:insert name="base">
-        <ui:include src="base.xhtml"></ui:include>
-    </ui:insert>
-</h:head>
-<h:body>
-    <div class="main">
-        <div style="child-align: top;">
-            <h:form class="login100-form validate-form">
 
-                <div style="text-align: center;"><h:outputLabel value="Create new branch" style="align-self: center; font-size: xx-large"/></div>
+    <h:head>
 
-                <div class="wrap-input100">
-                    <h:outputLabel value="Branch name"/>
-                    <h:inputText value="#{branchRequest.name}" id="branch" class="input100"/>
+        <title>Admin Profile</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
+        <ui:insert name="base">
+            <ui:include src="base.xhtml"></ui:include>
+        </ui:insert>
+
+    </h:head>
+
+    <h:body>
+        <div class="wrap-login100">
+            <div class="main">
+                <div style="child-align: top;">
+                    <h:form class="login100-form validate-form">
+
+                        <div style="text-align: center;"><h:outputLabel value="Create new branch" style="align-self: center; font-size: large"/></div>
+
+                        <div class="wrap-input100">
+                            <h:outputLabel value="Branch name"/>
+                            <h:inputText value="#{branchController.branch.name}" id="branch" class="input100"/>
+                        </div>
+
+                        <div class="container-login100-form-btn">
+                            <h:commandButton value="Create" class="login100-form-btn" action="#{branchController.save}"/>
+                        </div>
+                    </h:form>
                 </div>
+            </div>
 
-                <div class="container-login100-form-btn">
-                    <h:commandButton value="Create" class="login100-form-btn" action="#{branchController.createBranch}"/>
+
+
+
+            <div class="main">
+                <div style="child-align: top;">
+                    <h:form class="login100-form validate-form">
+
+                        <div style="text-align: center;"><h:outputLabel value="Create new category" style="align-self: center; font-size: large"/></div>
+
+                        <div class="wrap-input100">
+                            <h:outputLabel value="Category name"/>
+                            <h:inputText value="#{categoryController.category.name}" id="name" class="input100"/>
+                        </div>
+                        <h:message for="name"/>
+
+                        <div class="wrap-input100">
+                            <h:outputLabel value = "Branch"/>
+                            <h:selectOneMenu value="#{categoryController.category.branch}" class="input100" id="category">
+                                <f:selectItems value="#{categoryController.branchList}" var="branch" itemLabel="#{branch.name}" itemValue="#{branch.name}"/>
+                            </h:selectOneMenu>
+                        </div>
+                        <h:message for="category"/>
+
+                        <div class="container-login100-form-btn">
+                            <h:commandButton value="Create" class="login100-form-btn" action="#{categoryController.saveCategory}"/>
+                        </div>
+                    </h:form>
                 </div>
-
-            </h:form>
-
+            </div>
         </div>
-    </div>
 
-    <div class="main">
-        <div style="child-align: top;">
-            <h:form class="login100-form validate-form">
+        <div class="wrap-login100">
+            <div class = "main">
+                <h:form class="login100-form validate-form">
+                    <div style="text-align: center;"><h:outputLabel value="Edit branch" style="align-self: center; font-size: large"/></div>
+                    <h:dataTable var="branch" value="#{listBranchController.branchList}">
+                        <h:inputHidden>
+                            <h:column>
+                                #{branch.id}
+                            </h:column>
+                        </h:inputHidden>
+                        <div class="wrap-input100">
+                            <h:column style="align-self: center; font-size: large">
+                                #{branch.name}
+                            </h:column>
+                        </div>
+                        <h:column>
+                            <div class="container-login100-form-btn">
+                                <h:button value="Edit" outcome="editBranch.xhtml" class="login100-form-btn">
+                                    <f:param name="id" value="#{branch.id}"/>
+                                </h:button>
+                            </div>
+                        </h:column>
+                    </h:dataTable>
+                </h:form>
+            </div>
 
-                <div style="text-align: center;"><h:outputLabel value="Edit branch" style="align-self: center; font-size: xx-large"/></div>
-                <h:inputHidden value="#{branchController.editRequest.id}" />
-                <div class="wrap-input100">
-                    <h:outputLabel value="Branch name"/>
-                    <h:inputText value="#{branchRequest.name}" id="branch_name" class="input100"/>
-                </div>
 
-                <div class="wrap-input100">
-                    <h:outputLabel value="New branch name"/>
-                    <h:inputText value="#{branchController.editRequest.newName}" id="new_branch_name" class="input100"/>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <h:commandButton value="Edit" class="login100-form-btn" action="#{branchController.save}"/>
-                </div>
-
-            </h:form>
-
+            <div class = "main">
+                <h:form class="login100-form validate-form">
+                    <div style="text-align: center;"><h:outputLabel value="Edit category" style="align-self: center; font-size: large"/></div>
+                    <h:dataTable var="category" value="#{listCategoryController.categoryList}">
+                        <h:inputHidden>
+                            <h:column>
+                                #{category.id}
+                            </h:column>
+                        </h:inputHidden>
+                        <div class="wrap-input100">
+                            <h:column style="align-self: center; font-size: large">
+                                #{category.name}
+                            </h:column>
+                        </div>
+                        <div class="wrap-input100">
+                            <h:column style="align-self: center; font-size: large">
+                                #{category.branch.name}
+                            </h:column>
+                        </div>
+                        <h:column>
+                            <div class="container-login100-form-btn">
+                                <h:button value="Edit" outcome="editCategory.xhtml" class="login100-form-btn">
+                                    <f:param name="id" value="#{category.id}"/>
+                                </h:button>
+                            </div>
+                        </h:column>
+                    </h:dataTable>
+                </h:form>
+            </div>
         </div>
-    </div>
+        <ui:insert name="js">
+            <ui:include src="js.xhtml"></ui:include>
+        </ui:insert>
 
-    <div class="main">
-        <div style="child-align: top;">
-            <h:form class="login100-form validate-form">
-
-                <div style="text-align: center;"><h:outputLabel value="Create new category" style="align-self: center; font-size: xx-large"/></div>
-
-                <div class="wrap-input100">
-                    <h:outputLabel value="Category name"/>
-                    <h:inputText value="#{categoryRequest.name}" id="category" class="input100"/>
-                </div>
-
-                <div class="wrap-input100">
-                    <h:outputLabel value="Branch"/>
-                    <h:inputText value="#{categoryRequest.branch}" id="category_branch" class="input100"/>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <h:commandButton value="Create" class="login100-form-btn" action="#{categoryController.createCategory()}"/>
-                </div>
-
-            </h:form>
-
-        </div>
-    </div>
-
-    <div class="main">
-        <div style="child-align: top;">
-            <h:form class="login100-form validate-form">
-
-                <div style="text-align: center;"><h:outputLabel value="Edit category" style="align-self: center; font-size: xx-large"/></div>
-
-                <div class="wrap-input100">
-                    <h:outputLabel value="Category name"/>
-                    <h:inputText value="#{categoryRequest.name}" id="category_name" class="input100"/>
-                </div>
-
-                <div class="wrap-input100">
-                    <h:outputLabel value="Branch name"/>
-                    <h:inputText value="#{editCategoryRequest.branch}" id="new_category_branch" class="input100"/>
-                </div>
-
-                <div class="wrap-input100">
-                    <h:outputLabel value="New category name"/>
-                    <h:inputText value="#{editCategoryRequest.name}" id="new_category_name" class="input100"/>
-                </div>
-
-                <div class="container-login100-form-btn">
-                    <h:commandButton value="Edit" class="login100-form-btn" action="#{categoryController.editCategory()}"/>
-                </div>
-
-            </h:form>
-
-        </div>
-    </div>
-
-    <ui:insert name="js">
-        <ui:include src="js.xhtml"></ui:include>
-    </ui:insert>
-</h:body>
+    </h:body>
+</f:view>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
