--- a/app/src/main/webapp/profile.xhtml
+++ b/app/src/main/webapp/profile.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://xmlns.jcp.org/jsf/html">
 
 <h:head>
-    <title>App</title>
+    <title>Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 
@@ -16,24 +16,7 @@
 </h:head>
 <h:body>
     <div class="main">
-        <div style="text-align: center;">
-            <h2>Welcome to application!</h2>
-            <h:outputText value="#{msg['jaz.app.name']}"/>
 
-            <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="login.xhtml">Log in</a>
-            </div>
-            <p></p>
-            <h:form>
-                <div class="container-login100-form-btn">
-                    <p:commandButton value="logout" action="#{logoutController.logout}"/>
-                </div>
-            </h:form>
-            <p></p>
-            <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>
-            </div>
-        </div>
     </div>
     <ui:insert name="js">
         <ui:include src="js.xhtml"></ui:include>
