--- a/app/src/main/webapp/editBranch.xhtml
+++ b/app/src/main/webapp/editBranch.xhtml
@@ -33,7 +33,7 @@
                     </div>
                     <div class="wrap-input100">
                         <h:outputLabel for="name" value = "Name"/>
-                        <h:inputText id="name" value="#{branchController.branch.name}" class="input100"/>
+                        <h:inputText id="name" value="#{branchController.editBranchRequest.name}" class="input100"/>
                     </div>
                     <div class="container-login100-form-btn">
                         <h:commandButton value="Save" action="#{branchController.save}" class="login100-form-btn"/>
