--- a/app/src/main/webapp/editCategory.xhtml
+++ b/app/src/main/webapp/editCategory.xhtml
@@ -9,6 +9,10 @@
 
 
 
+    <f:metadata>
+        <f:viewParam name="id" value="#{categoryController.editCategoryRequest.id}"/>
+    </f:metadata>
+
     <h:head>
         <title>Edit Category</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -27,18 +31,19 @@
                     <div style="text-align: center;">
                         <h:outputLabel value="Edit category" style="align-self: center; font-size: large"/>
                     </div>
+                    <h:inputHidden id="id" value="#{categoryController.editCategoryRequest.id}"/>
                     <div class="wrap-input100">
                         <h:outputLabel for="name" value = "Name"/>
-                        <h:inputText id="name" value="#{categoryController.category.name}" class="input100"/>
+                        <h:inputText id="name" value="#{categoryController.editCategoryRequest.name}" class="input100"/>
                     </div>
                     <div class="wrap-input100">
                         <h:outputLabel value = "Branch"/>
-                        <h:selectOneMenu value="#{categoryController.category.branch}" class="input100">
-                            <f:selectItems value="#{categoryController.branchList}" var="branch" itemLabel="#{branch.name}" itemValue="#{branch}"/>
+                        <h:selectOneMenu value="#{categoryController.editCategoryRequest.branchId}" class="input100">
+                            <f:selectItems value="#{listBranchController.branchList}" var="branch" itemLabel="#{branch.name}" itemValue="#{branch}"/>
                         </h:selectOneMenu>
                     </div>
                     <div class="container-login100-form-btn">
-                        <h:commandButton value="Save" action="#{categoryController.saveCategory}" class="login100-form-btn"/>
+                        <h:commandButton value="Save" action="#{categoryController.save}" class="login100-form-btn"/>
                     </div>
                 </h:form>
 
