--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -36,6 +36,9 @@
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="adminProfile.xhtml">Admin</a>
             </div>
+            <div class="container-login100-form-btn">
+                <a class="container-login100-form-btn" href="profile.xhtml">profile</a>
+            </div>
         </div>
     </div>
     <ui:insert name="js">
