--- a/app/src/main/webapp/adminProfile.xhtml
+++ b/app/src/main/webapp/adminProfile.xhtml
@@ -28,10 +28,10 @@
                     <h:form class="login100-form validate-form">
 
                         <div style="text-align: center;"><h:outputLabel value="Create new branch" style="align-self: center; font-size: large"/></div>
-
+                        <h:inputHidden value="#{branchController.editBranchRequest.id}"/>
                         <div class="wrap-input100">
                             <h:outputLabel value="Branch name"/>
-                            <h:inputText value="#{branchController.branch.name}" id="branch" class="input100"/>
+                            <h:inputText value="#{branchController.editBranchRequest.name}" id="branch" class="input100"/>
                         </div>
 
                         <div class="container-login100-form-btn">
@@ -49,23 +49,23 @@
                     <h:form class="login100-form validate-form">
 
                         <div style="text-align: center;"><h:outputLabel value="Create new category" style="align-self: center; font-size: large"/></div>
-
+                        <h:inputHidden value="#{categoryController.editCategoryRequest.id}" id="id"/>
                         <div class="wrap-input100">
                             <h:outputLabel value="Category name"/>
-                            <h:inputText value="#{categoryController.category.name}" id="name" class="input100"/>
+                            <h:inputText value="#{categoryController.editCategoryRequest.name}" id="name" class="input100"/>
                         </div>
                         <h:message for="name"/>
 
                         <div class="wrap-input100">
                             <h:outputLabel value = "Branch"/>
-                            <h:selectOneMenu value="#{categoryController.category.branch}" class="input100" id="category">
-                                <f:selectItems value="#{categoryController.branchList}" var="branch" itemLabel="#{branch.name}" itemValue="#{branch.name}"/>
+                            <h:selectOneMenu value="#{categoryController.editCategoryRequest.branchId}" class="input100" id="category">
+                                <f:selectItems value="#{listBranchController.branchList}" var="branch" itemLabel="#{branch.name}" itemValue="#{branch.id}"/>
                             </h:selectOneMenu>
                         </div>
                         <h:message for="category"/>
 
                         <div class="container-login100-form-btn">
-                            <h:commandButton value="Create" class="login100-form-btn" action="#{categoryController.saveCategory}"/>
+                            <h:commandButton value="Create" class="login100-form-btn" action="#{categoryController.save}"/>
                         </div>
                     </h:form>
                 </div>
