--- a/app/src/main/webapp/profile.xhtml
+++ b/app/src/main/webapp/profile.xhtml
@@ -3,8 +3,9 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://xmlns.jcp.org/jsf/html">
-
+      xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+<f:view>
 <h:head>
     <title>Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -13,13 +14,66 @@
     <ui:insert name="base">
         <ui:include src="base.xhtml"></ui:include>
     </ui:insert>
+
 </h:head>
+
 <h:body>
-    <div class="main">
+
+    <div class="wrap-login100">
+
+        <div class="main">
+            <div style="child-align: top;">
+                <h:form class="login100-form validate-form">
+
+                    <div style="text-align: center;"><h:outputLabel value="Create new auction" style="align-self: center; font-size: large"/></div>
+
+                    <div class="wrap-input100">
+                        <h:outputLabel value="Auction name"/>
+                        <h:inputText value="#{auctionRequest.title}"  class="input100"/>
+                    </div>
+
+                    <div class="wrap-input100">
+                        <h:outputLabel value = "Category"/>
+                        <h:selectOneMenu value="#{categoryController.category}" class="input100">
+                            <f:selectItems value="#{listCategoryController.categoryList}" var="branch" itemLabel="#{category.name}" itemValue="#{category}"/>
+                        </h:selectOneMenu>
+                    </div>
+
+                    <div class="wrap-input100">
+                        <h:outputLabel value="Description"/>
+                        <h:inputText value="#{auctionRequest.description}" class="input100"/>
+                    </div>
+
+                    <div class="wrap-input100">
+                        <h:outputLabel value="Price"/>
+                        <h:inputText value="#{auctionRequest.price}" class="input100"/>
+                    </div>
+
+                    <div class="wrap-input100">
+                        <h:outputLabel value="Photos"/>
+                        <h:inputText value="#{auctionRequest.photos}" class="input100"/>
+                    </div>
+
+                    <div class="wrap-input100">
+                        <h:outputLabel value="Parameters"/>
+                        <h:inputText value="#{auctionRequest.parameters}" class="input100"/>
+                    </div>
+
+                        <h:inputHidden value="#{auctionRequest.ownerId}" class="input100"/>
+
+                    <div class="container-login100-form-btn">
+                        <h:commandButton value="Create" class="login100-form-btn" action="#{branchController.save}"/>
+                    </div>
+                </h:form>
+            </div>
+        </div>
 
     </div>
+
     <ui:insert name="js">
         <ui:include src="js.xhtml"></ui:include>
     </ui:insert>
+
 </h:body>
+</f:view>
 </html>
