--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -17,12 +17,8 @@
 <h:body>
     <div class="main">
         <div style="text-align: center;">
-            <h2>Welcome to application!</h2>
-            <h:outputText value="#{msg['jaz.app.name']}"/>
+            <h2>Welcome to <h:outputText value="#{msg['app.name']}"/>!</h2>
 
-            <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="login.xhtml">Log in</a>
-            </div>
             <p></p>
             <h:form>
                 <div class="container-login100-form-btn">
@@ -31,10 +27,7 @@
             </h:form>
             <p></p>
             <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="register.xhtml">Create new account</a>
-            </div>
-            <div class="container-login100-form-btn">
-                <a class="container-login100-form-btn" href="adminProfile.xhtml">Admin</a>
+                <a class="container-login100-form-btn" href="adminProfile.admin.xhtml">Admin</a>
             </div>
             <div class="container-login100-form-btn">
                 <a class="container-login100-form-btn" href="profile.xhtml">profile</a>
