--- a/app/src/main/webapp/register.xhtml
+++ b/app/src/main/webapp/register.xhtml
@@ -4,20 +4,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:f="http://xmlns.jcp.org/jsf/core">
 <h:head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register   AlienBrain</title>
+    <title>Register AlienBrain</title>
 
 
 
     <ui:insert name="base">
-        <ui:include src="base.xhtml"></ui:include>
+        <ui:include src="jsf/base.xhtml"></ui:include>
     </ui:insert>
-<!--    <h:outputStylesheet name="img.jpg" library="images"/>-->
-<!--    <h:outputStylesheet name="bootstrap.min.css" library="vendor"/>-->
-<!--    <h:outputStylesheet name="animate.css" library="vendor"/>-->
-<!--    <h:outputStylesheet name="hamburgers.min.css" library="vendor"/>-->
-<!--    <h:outputStylesheet name="select2.min.css" library="vendor"/>-->
-<!--    <h:outputStylesheet name="main.css" library="css"/>-->
-<!--    <h:outputStylesheet name="util.css" library="css"/>-->
+    <h:outputStylesheet name="img.jpg" library="images"/>
+    <h:outputStylesheet name="bootstrap.min.css" library="vendor"/>
+    <h:outputStylesheet name="animate.css" library="vendor"/>
+    <h:outputStylesheet name="hamburgers.min.css" library="vendor"/>
+    <h:outputStylesheet name="select2.min.css" library="vendor"/>
+    <h:outputStylesheet name="main.css" library="css"/>
+    <h:outputStylesheet name="util.css" library="css"/>
 </h:head>
 <h:body>
     <div class="container-login100" >
@@ -50,7 +50,7 @@
                         <div class="wrap-input100">
                             <h:outputLabel value="Username"/>
                             <h:inputText id="username" validatorMessage="Username can have only small letters and numbers." value="#{registerRequest.username}" label="Username" class="input100">
-                                <f:validateRegex pattern="((?=.*\d)(?=.*[a-z]).{1,33})"/>
+                                <f:validateRegex pattern="^[a-zA-Z0-9]+$"/>
                             </h:inputText>
                             <h:messages for="username"></h:messages>
                         </div>
@@ -75,13 +75,13 @@
 
                         <div class="wrap-input100">
                             <h:outputLabel value="Birthday"/>
-                            <h:inputText validatorMessage="dd/MM/yyyy" value="#{registerRequest.birthDate}" id="birthDate" class="input100">
-                                <f:validateRegex pattern="^[0-3]?[0-9]/[0-3]?[0-9]/(?:[0-9]{2})?[0-9]{2}$"/>
+                            <h:inputText validatorMessage="dd-MM-yyyy" value="#{registerRequest.birthDate}" id="birthDate" class="input100">
+                                <f:convertDateTime type="localDate" pattern="dd-MM-yyyy"/>
                             </h:inputText>
-                            <h:messages for="birthDate"></h:messages>
+                            <h:message for="birthDate"></h:message>
                         </div>
 
-                        <h:inputHidden value="#{registerRequest.admin}"/>
+                        <h:inputHidden value="#{registerRequest.role}"/>
 
                         <div class="container-login100-form-btn">
                             <h:commandButton value="Register" class="login100-form-btn" action="#{registerController.register}"/>
@@ -98,7 +98,7 @@
     </div>
 
     <ui:insert name="js">
-        <ui:include src="js.xhtml"></ui:include>
+        <ui:include src="jsf/js.xhtml"></ui:include>
     </ui:insert>
 </h:body>
 </html>
