--- a/app/src/main/webapp/user/createAuction.xhtml
+++ b/app/src/main/webapp/user/createAuction.xhtml
@@ -5,21 +5,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html"
       xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:p="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<f:view>
-
-<h:head>
-    <title>Auction</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-
-    <ui:insert name="base">
-        <ui:include src="base.xhtml"></ui:include>
-    </ui:insert>
-
-</h:head>
 
 <h:body>
-
+    <ui:composition template="../jsf/basic.xhtml">
+    <ui:param name="title" value="Create"/>
+    <ui:define name="content">
+    <div class="topnav">
+        <a href="../index.xhtml">Home</a>
+        <a class="active" href="createPhoto.xhtml">Create product</a>
+        <a href="auctionList.xhtml">Your products</a>
+        <a href="../admin/admin.xhtml">Profile</a>
+        <a href="../login.xhtml">Log in</a>
+        <h:form>
+            <a><p:commandLink value="Log out" action="#{logoutController.logout}"/></a>
+        </h:form>
+    </div>
     <div class="wrap-login100">
 
         <div class="main">
@@ -27,16 +27,20 @@
                 <h:form class="login100-form validate-form">
 
                     <div style="text-align: center;"><h:outputLabel value="Create new auction" style="align-self: center; font-size: large"/></div>
-
                     <div class="wrap-input100">
                         <h:outputLabel value="Auction name"/>
                         <h:inputText value="#{auctionRequest.title}"  class="input100"/>
                     </div>
-
+                    <div class="wrap-input100">
+                        <h:outputLabel value = "Photo"/>
+                        <h:selectOneMenu value="#{auctionController.auctionRequest.photo}" class="input100">
+                            <f:selectItems value="#{listPhotoController.photoList}" var="photo" itemLabel="#{photo.link}" itemValue="#{photo.id}"/>
+                        </h:selectOneMenu>
+                    </div>
                     <div class="wrap-input100">
                         <h:outputLabel value = "Category"/>
-                        <h:selectOneMenu value="#{categoryController.category}" class="input100">
-                            <f:selectItems value="#{listCategoryController.categoryList}" var="branch" itemLabel="#{category.name}" itemValue="#{category}"/>
+                        <h:selectOneMenu value="#{auctionController.auctionRequest.category_id}" class="input100">
+                            <f:selectItems value="#{listCategoryController.categoryList}" var="category" itemLabel="#{category.name}" itemValue="#{category.id}"/>
                         </h:selectOneMenu>
                     </div>
 
@@ -50,20 +54,8 @@
                         <h:inputText value="#{auctionRequest.price}" class="input100"/>
                     </div>
 
-                    <div class="wrap-input100">
-                        <h:outputLabel value="Photos"/>
-                        <h:inputText value="#{auctionRequest.photos}" class="input100"/>
-                    </div>
-
-                    <div class="wrap-input100">
-                        <h:outputLabel value="Parameters"/>
-                        <h:inputText value="#{auctionRequest.parameters}" class="input100"/>
-                    </div>
-
-                        <h:inputHidden value="#{auctionRequest.ownerId}" class="input100"/>
-
                     <div class="container-login100-form-btn">
-                        <h:commandButton value="Create" class="login100-form-btn" action="#{branchController.save}"/>
+                        <h:commandButton value="Next" class="login100-form-btn" action="#{auctionController.save}"/>
                     </div>
                 </h:form>
             </div>
@@ -71,10 +63,37 @@
 
     </div>
 
-    <ui:insert name="js">
-        <ui:include src="js.xhtml"></ui:include>
-    </ui:insert>
-
+        <ui:insert name="js">
+            <ui:include src="../jsf/js.xhtml"></ui:include>
+        </ui:insert>
+    </ui:define>
+    </ui:composition>
 </h:body>
-</f:view>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
